.provarCaches/00D5f000005vwGkEAI/objects/rstk__sytxnexpdtl__c.object
<CustomObject>
    <description>sytxnexpdtl__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__sytxnexpdtl_batchno__r.rstk__externalid__c &amp; &apos;_&apos; &amp; TEXT( rstk__sytxnexpdtl_acctdate__c ) &amp; &apos;_&apos; &amp; IF(ISPICKVAL(rstk__sytxnexpdtl_drcr__c, &apos;Credit&apos;), &apos;Credit&apos;, IF(ISPICKVAL(rstk__sytxnexpdtl_drcr__c, &apos;Debit&apos;), &apos;Debit&apos;, &apos;&apos;)) &amp; &apos;_&apos; &amp;  rstk__sytxnexpdtl_mfgacct__r.rstk__syacc_mfgacct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__sytxnexpdtl_batchno__r.rstk__externalid__c &amp; &apos;_&apos; &amp; TEXT( rstk__sytxnexpdtl_acctdate__c ) &amp; &apos;_&apos; &amp; IF(ISPICKVAL(rstk__sytxnexpdtl_drcr__c, &apos;Credit&apos;), &apos;Credit&apos;, IF(ISPICKVAL(rstk__sytxnexpdtl_drcr__c, &apos;Debit&apos;), &apos;Debit&apos;, &apos;&apos;)) &amp; &apos;_&apos; &amp;  rstk__sytxnexpdtl_mfgacct__r.rstk__syacc_mfgacct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sytxnexpdtl_acctdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Accounting (Txn) Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__sytxnexpdtl_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Summary Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sytxnexpdtl_batchno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Transaction Export Header</label>
        <referenceTo>rstk__sytxnexport__c</referenceTo>
        <relationshipLabel>Transaction Export Details</relationshipLabel>
        <relationshipName>sytxnexpdtls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__sytxnexpdtl_drcr__c</fullName>
        <label>Entry Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sytxnexpdtl_journalentryno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Journal Entry Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sytxnexpdtl_mfgacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Manufacturing Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Transaction Export Details</relationshipLabel>
        <relationshipName>sytxnexpdtls</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Transaction Export Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Export Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>